--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://MatthewEvWalker.github.io/Matthew-E-Walker-ReactPortfolio/",
   "name": "matthew_react_portfolio",
   "version": "0.1.0",
   "private": true,
