--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "matthew_react_portfolio",
   "version": "0.1.0",
-  "homepage": "https://MatthewEvWalker.github.io/Matthew-E-Walker-ReactPortfolio",
+  "homepage": "http://MatthewEvWalker.github.io/Matthew-E-Walker-ReactPortfolio",
   "private": true,
   "dependencies": {
     "@emailjs/browser": "^3.10.0",
@@ -48,5 +48,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^5.0.0"
   }
 }
